Adds simple SHACL conformance checking. Fixes RDFa rendering for validation report conforms statement.
